# metar-to-IWXXM

./: .env.example  .gitignore  .gitmodules  README.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
auth/: Dockerfile  __init__.py  __main__.py  api.py  auth.db  database.py  models.py  pyproject.toml  security.py  test_auth.db
auth/src/auth/: __init__.py  __main__.py  api.py  database.py  models.py  security.py
auth/tests/: test_auth.py
backend/: Dockerfile  api.py  conversion.py  pyproject.toml  upload_to_database.py  upload_to_nws.py
backend/src/backend/: __init__.py  __main__.py  api.py  conversion.py  upload_to_database.py  upload_to_nws.py  validation.py
backend/tests/: test_api.py  test_convert.py
docs/: API.md
gui/: Dockerfile  __main__.py  app.py  auth.db  pyproject.toml  test_auth.db
gui/src/gui/: __init__.py  __main__.py  app.py
gui/static/: app.js  auth.js  index.html  login.html  login.js  style.css
gui/tests/: conftest.py  test_gui.py  test_ui_selenium.py
notebooks/: testing.ipynb
scripts/: README.md  launch_api.bat  launch_api.ps1  launch_api.sh  launch_gui.bat  launch_gui.ps1  launch_gui.sh
tests/: test_app_integration.py  test_convert.py  test_gui.py
