[project]
name = "metar-backend"
version = "0.1.0"
description = "Backend API for METAR to IWXXM conversion"
requires-python = ">=3.9"
dependencies = [
	"fastapi>=0.110",
	"uvicorn>=0.23",
	"python-multipart>=0.0.20",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["backend*"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "httpx>=0.28.1",
]
